--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#ffc107</color>
     <color name="colorPrimaryDark">#ffc107</color>
     <color name="colorAccent">#007bff</color>
-    <color name="navigationBarColor">#ffc107</color>
+<!--    <color name="navigationBarColor">#ffc107</color>-->
 </resources>
